# Movement-webrtc

./: .gitignore
.utmp/RelWithDebInfo/2b45185n/: hash_key.txt
.utmp/RelWithDebInfo/2b45185n/arm64-v8a/: .ninja_deps  .ninja_log  CMakeCache.txt  additional_project_files.txt  android_gradle_build.json  android_gradle_build_mini.json  build.ninja  build_file_index.txt  cmake_install.cmake  prefab_config.json  (+2 more)
Assets/Jammo-Character/Materials/: m_ground.mat  m_jammo_eyes.mat  m_jammo_metal.mat
Assets/Jammo-Character/Models/: Jammo_LowPoly-metadata.asset  Jammo_LowPoly.json
Assets/Oculus/: OculusProjectConfig.asset
Assets/Plugins/Android/: AndroidManifest.xml
Assets/RBY/: EasyIK.cs  RBY.prefab  Skeleton.unity
Assets/RBY/URDF/rby1_new/: CMakeLists.txt  package.xml  rby1.prefab
Assets/RBY/URDF/rby1_new/launch/: rby1_state_publisher.launch.py  test.launch.py
Assets/RBY/URDF/rby1_new/urdf/: initial_positions.yaml  rby1.ros2_control.xacro  rby1.urdf  rby1.urdf.xacro
Assets/RBY/URDF/rby1_new/urdf/Materials/: Default.mat
Assets/RBY/URDF/rby1_new/urdf/rby1_description/meshes/: base_m.dae
Assets/Resources/: OculusRuntimeSettings.asset
Assets/Scripts/: ArmIKController.cs  BodyJointsWebRTCSender.cs  ControllerStatusPanel.cs  IpInputField.cs  JointPositionsPanel.cs  RetargetedJointPositionsPanel.cs
Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
Assets/XR/Settings/: OpenXRPackageSettings.asset
Assets/_Recovery/: 0.unity
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
(+22 files in other folders)
