<?xml version="1.0"?>
<package format="3">
  <name>rby1_description</name>
  <version>0.1.0</version>
  <description>Robot description package for RBY1</description>
  
  <maintainer email="iaunoh@rainbow-robotics.com">Donghyeon Noh</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <build_depend>xacro</build_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
